--- a/activity.ipynb
+++ b/activity.ipynb
@@ -133,7 +133,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "00e4337dcf4b65043497c904b1e7b646",
+     "checksum": "c80e3933b7b1fe4f2ee73dc744c443e5",
      "grade": false,
      "grade_id": "cell-8dc2d645f9359607",
      "locked": false,
@@ -144,8 +144,10 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def bigabs():\n",
+    "    \"\"\"Return an x such that f(x) has large absolute condition number.\"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()"
    ]
   },
   {
@@ -202,7 +204,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "c007e140dbda99d6ea3b494c697c3dd5",
+     "checksum": "43cc8a4b1c2e96588b50591b90e812d1",
      "grade": false,
      "grade_id": "cell-14f6036919b7a25e",
      "locked": false,
@@ -213,8 +215,10 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def bigrel():\n",
+    "    \"\"\"Return a (different) x such that g(x) has large relative condition number.\"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()"
    ]
   },
   {
